--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "nodemon": "^3.1.10"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "axios": "^1.10.0",
     "axios-retry": "^4.5.0",
     "bcryptjs": "^3.0.2",
